# ring-kde-appimage-builder

./: AppRun  CMakeLists.txt  CMakeRingWrapper.txt.in  CMakeWrapper.txt.in  Dockerfile  GenerateExportHeader.cmake  README.md  geticons.sh  make.conf  qmake.conf
cmake/: qt5pluginenabler.cmake
glibc/: Manifest  glibc-2.23-r4.ebuild
glibc/files/2.23/: glibc-2.23-symbols.patch
patches/: dbusmenu-qt5.patch  diff  karchive.patch  kbookmarks.patch  kconfig.patch  kconfigwidgets.patch  kcrash.patch  kdbusaddons.patch  kdeclarative.patch  kglobalaccel.patch  kguiaddons.patch  ki18n.patch  kiconthemes.patch  kinit.patch  kio.patch  kirigami.patch  kitemviews.patch  kjobwidgets.patch  knotifications.patch  knotifyconfig.patch  kpackage.patch  kservice.patch  ktextwidgets.patch  kwidgetsaddons.patch  kwindowsystem.patch  kxmlgui.patch  qqc2-desktop-style.patch  ring-daemon.patch  ring-kde.patch  solid.patch  sonnet.patch
